0.6.0 - currently working on
- [#2680] Feature: Add datamapper::save
- [#2797] Feature: Add getDescription() to the FE group model
- [#2228] Feature: Add a DB-less mode/testing mode to the mappers
- [#2474] Feature: Add functions FrontEndUser::hasGroupUids
- [#2471] Feature: Mappers should be able to return a result list for an array of arrays with model data
- [#2764] Feature: Add internal functions for the DataMapper to create models from arrays of data
- [#2767] Feature: Add a "readOnly" flag to models
- [#2771] Feature: Add function setToDeleted to the model
- [#2766] Feature: Add country model and mapper
- [#2679] Feature: Track the dirty/clean state of models
- [#2755] Fix: BE user mapper needs to lowercase the CLI user before DB search
- [#2737] Fix: set on a ghost should load the object
- [#2460] Feature: Add a m:n table mapper
- [#2725] Feature: Add a BE user class
- [#2728] Feature: The testing framework should create BE users
- [#2730] Fix: Undefined variable in catch section of tx_oelib_templatehelper::setSubpart
- [#2458] Feature: Support relations by comma-separated lists
- [#2717] Change: Speed up the fake FE
- [#1456] Cleanup: Simplify and clean up our singletons
- [#2703] Feature: Add an optional parameter "cssFile" to Mail::setHTMLMessage
- [#2463] Feature: Add a TS setup configuration class
- [#2708] Feature: Add a FrontEndLoginManager
- [#2119] Feature: Add a class "configurationRegistry"
- [#2678] Feature: Enhance the exception that is thrown when accessing a dead model's data
- [#2594] Feature: Use HTML for the thank-you and unregistration e-mails to the attendees
- [#2643] Feature: Add a list class
- [#2710] Fix: Character set for the e-mail tests must not be constant
- [#2661] Change: The front-end user mapper should use the logged-in user's data whenever possible
- [#2676] Fix: Test errors for inexistent objects in the specialized contact form and thumbnails view
- [#2658] Change: Add more tests for the mappers and model